# okl_build_example

./: README.md
.github/workflows/: build-pipeline.yml
src/: .gitattributes  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/calculator/: _version.py
src/okl_build_example.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: test_calculator.py
