[metadata]
name = okl_build_example
version = 1.0.0
author = Oliver Klein
author_email = oliver.klein@arcor.de
url = https://github.com/eedokl/okl_build_example
description = An example package build on github
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
python_requires = >=3.8
