[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas == 1.4.1

[tool:pytest]
addopts = -rfEsx --cov=calculator/ --cov=tests/ --no-cov-on-fail --cov-report=term --cov-report html
norecursedirs = *.egg-info .git .mypy_cache node_modules .pytest_cache .vscode

[flake8]
# Match black line-length
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    ./src/calculator/_version.py
    ./src/_versioneer.py

[pycodestyle]
# Match black line-length
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    # Don't complain about abstract methods, they aren't run:
    @(abc\.)?abstractmethod
ignore_errors = True
omit =
    _version.py

[mypy]
# TODO: We will allow definitions to be untyped for now; in the future we will want to
#       toggle these back to True to enforce type checks.
disallow_untyped_defs = False
check_untyped_defs = False
# Empty `mypy` will run on the prefect module
# files = ./calculator/**/*.py

[mypy-setuptools]
ignore_missing_imports = True

[versioneer]
VCS = git
style = pep440
versionfile_source = calculator/_version.py
versionfile_build = calculator/_version.py
tag_prefix = calculator-
parentdir_prefix = okl_build_example-